# tree-sitter-belt

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-belt.pc.in
bindings/c/tree_sitter/: tree-sitter-belt.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_belt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBeltTests/: TreeSitterBeltTests.swift
editors/zed/: README.md
editors/zed/belt-lang/: extension.toml
editors/zed/belt-lang/languages/belt/: config.toml
examples/: fibo.belt  json-like.belt  long_string.belt  simple.belt
queries/: brackets.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
