[package]
name = "tree-sitter-belt"
description = "Belt, stack-oriented script language"
version = "0.1.0"
authors = ["lumiknit <aasr4r4@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "belt"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lumiknit/tree-sitter-belt"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
